@@ -1,3 +1,5 @@
+* Refactor attribute resolver in compileSelector() to avoid unneeded String#replace calls and other operations. [Diego Perini, jddalton]
+
 * Define compile() and setQSA() as private methods in the `DEBUG API` section and ensure exposed byClass(), byName(), and byTag(), return array values. [Diego Perini, jddalton]
 
 * Merge `compatMode` into `isQuirks` to reduce a variable. [Diego Perini] 
